sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: ';' expected but 'false' found.
	{	sorted false
                       ^AlgCocktailSort1:11: error: ')' expected but '}' found.
		}
                ^AlgCocktailSort1:18: error: ')' expected but '}' found.
		}
                ^